--- a/registration/.env.prod
+++ b/registration/.env.prod
@@ -2,7 +2,7 @@ STRIPE_SECRET="sk_live_51O52JsH8K0xcwG1CVOQomeyZm3stbz9uRZ4UMDrsHmD9R6XdIextfyoe
 STRIPE_WEBHOOK_SECRET="whsec_Y30xFHSuesGajGT9pBBFv7KeAb3lHpza"
 
 WEB_URL="https://www.dmcfincap.com"
-SERVER_ENDPOINT="https://dev.dmccapital.my"
+SERVER_ENDPOINT="https://clcs.dmcfincap.com"
 
 PAYMENT_SUCCESS_REDIRECT_PATH="${WEB_URL}/registration/completed.html"
 DMC_API_Key="8321743cb0ca19487be8d00928c13206"
