--- a/registration/.env.staging
+++ b/registration/.env.staging
@@ -2,7 +2,7 @@ STRIPE_SECRET="sk_test_51O63KYBalrlqzF0w4f7A3IeV93Mog3cgb7sLwSZCqePvBv7UJGiKXRE5
 STRIPE_WEBHOOK_SECRET="whsec_nZzHNWOm3sWsx7eYStlsdKG0ysb4oeTi"
 
 WEB_URL="https://www.dmcfincap.com"
-SERVER_ENDPOINT="https://clcs.dmccapital.my"
+SERVER_ENDPOINT="https://clcs.dmcfincap.com"
 
 PAYMENT_SUCCESS_REDIRECT_PATH="${WEB_URL}/registration/completed.html"
 DMC_API_Key="8321743cb0ca19487be8d00928c13206"
